tests/sumo/errors/begin_negative/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --begin -1
